--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,3 +2,16 @@ ja:
   time:
     formats:
       default: "%Y/%m/%d %H:%M"
+      
+  activerecord:
+    attributes:
+      user:
+        name: 名前
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワードの再確認
+        
+  activerecord:
+    attributes:
+      topic:
+        description: 投稿内容
