--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,3 +15,11 @@ ja:
     attributes:
       topic:
         description: 投稿内容
+        
+  activerecord:
+    attributes:
+      user:
+        name: 名前
+        email: メールアドレス
+        password: パスワード
+        password_confirmation: パスワードの再確認
